2007-07-03: Release version 2.17

        * get_paths command now takes a pathcount option, defaulting to
          2, instead of having a hardcoded constant of 2. This allows
          requesting more than 2 paths to a file.

        * make fsck log over-replicated files as policy violations.  it
          won't delete over-replicated files, though, just log

        * Document how to test MogileFS under doc/testing.txt. You really
          should read this if you want to use MogileFS to store your data.

        * Add a safety check to ensure that Postgresql-8.2 or newer is used.

        * Update mogdbsetup usage, and ensure it choses the correct admin
          username automatically.

        * Document the --type option to mogdbsetup.

        * Introduce the Postgres Store implementation. The locking system might
          still have issues, beware of stale locks! Initial prototype by Radu
          Greab <rg@yx.ro>, and developed heavily by Robin H. Johnson
          <robbat2@gentoo.org>.

        * start of support to make mogstored wrap Apache + web_dav

        * Remove duplicated [fsck] in log output of Fsck worker.

        * Handle HiRes gettimeofday correctly to get useful results. Arrays are
          important. This gives us correct timing output.

        * Handle input to log() correctly. Based on the implementation of
          Sys::Syslog::syslog(), produces no ugly warnings, and makes sure that
          printf stuff works nicely.

        * The unix_timestamp function belongs to the Store, not other classes.
          Need to add testcases for process_deletes and stats.

        * Using NULL during an INSERT for the AUTO_INCREMENT column does not
          work very well outside of MySQL. Pass the correct number of arguments
          to the INSERT instead.

        * Clean up all raw usages of UNIX_TIMETAMP() function, in preparation
          for database independence. If you need the unix timestamp, include the output